--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,20 @@ body {
   @apply bg-gray-900 text-white;
 }
 
+/* NProgress customization */
+#nprogress .bar {
+  @apply bg-purple-500;
+  height: 3px;
+}
+
+#nprogress .peg {
+  @apply shadow-purple-500;
+}
+
+#nprogress .spinner-icon {
+  @apply border-t-purple-500 border-l-purple-500;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
